fix: Add a little more shadow behind the white pieces

--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ body {
 
 .piece-white {
   color: #fff;
-  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
 }
 
 .piece-black {
